--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<!--   Thymleaf html :-Thing that are rendered is not static its dynmaix-->
+    <!--   Thymleaf html :-Thing that are rendered is not static its dynmaix-->
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -34,26 +34,19 @@
         </div>
     </nav>
 
-<!--    Inserting the fragemn -->
-    <div th:insert="components/book-search :: search-panel"></div>
+        <div th:insert="components/book-search :: search-panel"></div>
 
     <section class="content">
+<!--        <h5 class="card-title display-1" th:text="${searchResult.size}">Number</h5>-->
 
-        <div class="card">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img th:src="${coverImage}"
-                         class="img-fluid rounded-start" alt="...">
-                </div>
+        <div class="card-group">
 
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title display-2" th:text="${book.name}">Name</h5>
-                        <p class="card-text display-6" th:text="${book.authorNames}">Author name</p>
-                        <p class="card-text display-1" th:text="${book.description}">Book description</p>
-                        <p class="card-text">Published Date: <small class="text-muted" th:text="${book.publishedDate}">2020-01-01</small></p>
-                    </div>
-
+<!--            3 on per row  card-->
+            <div class="card" style="flex: 0 0 18%; margin: 30px;" th:each="result: ${searchResults}">
+                <img th:src="${result.cover_i}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${result.title}">Card title</h5>
+                    <a href="#" th:href="@{'/books/' + ${result.key}}" class="btn btn-primary">View book</a>
                 </div>
             </div>
         </div>
